--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <a href="pages/about.html">About</a>
           <a href="pages/agents.html">Agents</a>
           <a href="pages/contact.html">Contact</a>
-          <button class="btn" onclick="openModal()">Add Listing</button>
+          <button class="btn">Add Listing</button>
         </nav>
       </div>
     </header>
@@ -34,59 +34,59 @@
     <section class="hero">
       <div class="hero-left">
         <h1>Search beautiful homes & apartments</h1>
-        <p class="muted">Browse verified listings — filter by price, bedrooms, neighbourhood and more. New properties added daily.</p>
+        <p class="muted" style="color:gray;font-size:14px">Browse verified listings — filter by price, bedrooms, neighbourhood and more. New properties added daily.</p>
 
-        <form class="search-card" onsubmit="event.preventDefault();">
-          <input aria-label="Search city or neighbourhood" placeholder="City, neighbourhood, or ZIP" />
-          <select aria-label="Property type">
+        <form class="search-card" onsubmit="event.preventDefault();" style="display:flex;gap:8px;margin-top:12px">
+          <input aria-label="Search city or neighbourhood" placeholder="City, neighbourhood, or ZIP" style="flex:2;padding:8px;border-radius:6px;border:1px solid #ccc" />
+          <select aria-label="Property type" style="flex:1;padding:8px;border-radius:6px;border:1px solid #ccc">
             <option>Any type</option>
             <option>Apartment</option>
             <option>House</option>
             <option>Townhouse</option>
           </select>
-          <select aria-label="Min beds">
+          <select aria-label="Min beds" style="flex:1;padding:8px;border-radius:6px;border:1px solid #ccc">
             <option>Any beds</option>
             <option>1+</option>
             <option>2+</option>
             <option>3+</option>
           </select>
-          <button class="btn" style="flex:0 0 auto">Search</button>
+          <button class="btn" style="flex:0 0 auto;padding:8px 12px;background-color:#007BFF;color:white;border:none;border-radius:6px;cursor:pointer">Search</button>
         </form>
       </div>
 
-      <div style="width:360px">
-        <div class="card">
+      <div style="width:360px;margin-top:20px">
+        <div class="card" style="padding:12px;border-radius:8px;box-shadow:0 2px 6px rgba(0,0,0,0.1)">
           <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:8px">
-            <div><strong>Featured</strong><div class="muted" style="font-size:13px">Popular picks for you</div></div>
-            <div class="muted" style="font-size:12px">Updated: 2025-11-03</div>
+            <div><strong>Featured</strong><div class="muted" style="font-size:13px;color:gray">Popular picks for you</div></div>
+            <div class="muted" style="font-size:12px;color:gray">Updated: 2025-11-03</div>
           </div>
           <div style="display:flex;gap:10px;align-items:center">
             <img src="https://images.unsplash.com/photo-1560184897-6e0a4ad3b8f8?auto=format&fit=crop&w=400&q=60" alt="sample" style="width:92px;height:72px;object-fit:cover;border-radius:8px" />
             <div style="flex:1">
               <div style="font-weight:700">Modern Family Home</div>
-              <div class="muted" style="font-size:13px">3 bd · 2 ba · 145 m²</div>
+              <div class="muted" style="font-size:13px;color:gray">3 bd · 2 ba · 145 m²</div>
             </div>
           </div>
         </div>
       </div>
     </section>
 
-    <main class="layout">
-      <aside>
-        <div class="card">
+    <main class="layout" style="display:flex;gap:20px;margin-top:24px">
+      <aside style="flex:1;max-width:280px">
+        <div class="card" style="padding:16px;border-radius:8px;box-shadow:0 2px 6px rgba(0,0,0,0.05)">
           <h3 style="margin-top:0">Filters</h3>
 
-          <div class="filter-group">
+          <div class="filter-group" style="margin-bottom:12px">
             <label>Price range</label>
-            <div class="range">
-              <input placeholder="Min" />
-              <input placeholder="Max" />
+            <div class="range" style="display:flex;gap:8px;margin-top:4px">
+              <input placeholder="Min" style="flex:1;padding:6px;border-radius:6px;border:1px solid #ccc" />
+              <input placeholder="Max" style="flex:1;padding:6px;border-radius:6px;border:1px solid #ccc" />
             </div>
           </div>
 
-          <div class="filter-group">
+          <div class="filter-group" style="margin-bottom:12px">
             <label>Bedrooms</label>
-            <div class="checkbox-list">
+            <div class="checkbox-list" style="display:flex;flex-direction:column;margin-top:4px">
               <label><input type="checkbox" /> Studio</label>
               <label><input type="checkbox" /> 1</label>
               <label><input type="checkbox" /> 2+</label>
@@ -94,9 +94,9 @@
             </div>
           </div>
 
-          <div class="filter-group">
+          <div class="filter-group" style="margin-bottom:12px">
             <label>More</label>
-            <div class="checkbox-list">
+            <div class="checkbox-list" style="display:flex;flex-direction:column;margin-top:4px">
               <label><input type="checkbox" /> Parking</label>
               <label><input type="checkbox" /> Pet friendly</label>
               <label><input type="checkbox" /> Furnished</label>
@@ -104,121 +104,80 @@
           </div>
 
           <div style="display:flex;gap:10px;margin-top:10px">
-            <button class="btn">Apply</button>
-            <button class="ghost">Reset</button>
+            <button class="btn" style="flex:1;padding:8px;border-radius:6px;border:none;background-color:#007BFF;color:white;cursor:pointer">Apply</button>
+            <button class="ghost" style="flex:1;padding:8px;border-radius:6px;border:1px solid #ccc;background:white;cursor:pointer">Reset</button>
           </div>
         </div>
 
-        <div class="card" style="margin-top:16px">
+        <div class="card" style="margin-top:16px;padding:16px;border-radius:8px;box-shadow:0 2px 6px rgba(0,0,0,0.05)">
           <h4 style="margin:0 0 8px">Contact an agent</h4>
-          <div class="muted">Questions about a property? We'll connect you to a local agent.</div>
+          <div class="muted" style="color:gray;font-size:13px">Questions about a property? We'll connect you to a local agent.</div>
           <div style="margin-top:12px">
             <input placeholder="Your name" style="width:100%;padding:10px;border-radius:8px;border:1px solid #eef3fb;margin-bottom:8px" />
             <input placeholder="Phone or email" style="width:100%;padding:10px;border-radius:8px;border:1px solid #eef3fb;margin-bottom:8px" />
-            <button class="btn" style="width:100%">Request callback</button>
+            <button class="btn" style="width:100%;padding:10px;border-radius:8px;border:none;background-color:#007BFF;color:white;cursor:pointer">Request callback</button>
           </div>
         </div>
       </aside>
 
-      <section>
+      <section style="flex:3">
         <div style="display:flex;justify-content:space-between;align-items:center">
           <h2 id="listings">Properties</h2>
-          <div class="muted">Showing <strong>24</strong> results</div>
+          <div class="muted" style="color:gray">Showing <strong>24</strong> results</div>
         </div>
 
-        <div class="grid" style="margin-top:12px">
+        <div class="grid" style="margin-top:12px;display:grid;grid-template-columns:repeat(auto-fill,minmax(280px,1fr));gap:16px">
 
-          <!-- Property card template -->
-          <article class="prop">
-            <div class="media" style="background-image:url('https://images.unsplash.com/photo-1560448204-e02f11c3d0e2?auto=format&fit=crop&w=1200&q=60');background-size:cover;background-position:center"></div>
-            <div class="body">
-              <div class="flex" style="justify-content:space-between;align-items:flex-start">
+          <article class="prop" style="border-radius:8px;overflow:hidden;box-shadow:0 2px 6px rgba(0,0,0,0.05);background:white">
+            <div class="media" style="height:180px;background-image:url('https://images.unsplash.com/photo-1560448204-e02f11c3d0e2?auto=format&fit=crop&w=1200&q=60');background-size:cover;background-position:center"></div>
+            <div class="body" style="padding:12px">
+              <div class="flex" style="display:flex;justify-content:space-between;align-items:flex-start">
                 <div>
                   <h3 class="title">Charming 2BR Apartment</h3>
-                  <div class="meta">Downtown • 2 bd · 1 ba · 85 m²</div>
+                  <div class="meta" style="color:gray;font-size:13px">Downtown • 2 bd · 1 ba · 85 m²</div>
                 </div>
-                <div class="price">€1,350/mo</div>
+                <div class="price" style="font-weight:700">€1,350/mo</div>
               </div>
-              <p class="muted" style="margin:8px 0">Bright apartment with balcony and modern kitchen. Walking distance to tram and shops.</p>
-              <div class="tags">
-                <span class="tag">Balcony</span>
-                <span class="tag">Parking</span>
-                <span class="tag">Furnished</span>
+              <p class="muted" style="margin:8px 0;color:gray;font-size:13px">Bright apartment with balcony and modern kitchen. Walking distance to tram and shops.</p>
+              <div class="tags" style="display:flex;gap:6px;flex-wrap:wrap">
+                <span class="tag" style="background:#f1f1f1;padding:4px 6px;border-radius:4px;font-size:12px">Balcony</span>
+                <span class="tag" style="background:#f1f1f1;padding:4px 6px;border-radius:4px;font-size:12px">Parking</span>
+                <span class="tag" style="background:#f1f1f1;padding:4px 6px;border-radius:4px;font-size:12px">Furnished</span>
               </div>
               <div style="display:flex;gap:8px;margin-top:12px">
-                <a href="pages/property-detail.html?id=1" class="ghost">View</a>
-                <button class="btn">Contact</button>
+                <a href="pages/property-detail.html?id=1" class="ghost" style="flex:1;padding:6px;text-align:center;border:1px solid #ccc;border-radius:6px;text-decoration:none;color:black">View</a>
+                <button class="btn" style="flex:1;padding:6px;border-radius:6px;border:none;background-color:#007BFF;color:white;cursor:pointer">Contact</button>
               </div>
             </div>
           </article>
 
-          <article class="prop">
-            <div class="media" style="background-image:url('https://images.unsplash.com/photo-1572120360610-d971b9b7d4a9?auto=format&fit=crop&w=1200&q=60');background-size:cover;background-position:center"></div>
-            <div class="body">
-              <div class="flex" style="justify-content:space-between;align-items:flex-start">
-                <div>
-                  <h3 class="title">Family Home with Garden</h3>
-                  <div class="meta">Suburbia • 4 bd · 3 ba · 210 m²</div>
-                </div>
-                <div class="price">€420,000</div>
-              </div>
-              <p class="muted" style="margin:8px 0">Large garden, garage and great schools nearby. Ideal for families.</p>
-              <div class="tags">
-                <span class="tag">Garden</span>
-                <span class="tag">Garage</span>
-              </div>
-              <div style="display:flex;gap:8px;margin-top:12px">
-                <a href="pages/property-detail.html?id=2" class="ghost">View</a>
-                <button class="btn">Contact</button>
-              </div>
-            </div>
-          </article>
-
-          <!-- Repeat more cards or generate via server-side in a real project -->
-
-          <article class="prop">
-            <div class="media" style="background-image:url('https://images.unsplash.com/photo-1505691723518-36a1e13d0a9a?auto=format&fit=crop&w=1200&q=60');background-size:cover;background-position:center"></div>
-            <div class="body">
-              <div class="flex" style="justify-content:space-between;align-items:flex-start">
-                <div>
-                  <h3 class="title">Luxury Penthouse</h3>
-                  <div class="meta">City Center • 3 bd · 2 ba · 120 m²</div>
-                </div>
-                <div class="price">€2,500/mo</div>
-              </div>
-              <p class="muted" style="margin:8px 0">Stunning views, modern amenities, and premium location in the heart of the city.</p>
-              <div class="tags">
-                <span class="tag">Balcony</span>
-                <span class="tag">Parking</span>
-                <span class="tag">Furnished</span>
-              </div>
-              <div style="display:flex;gap:8px;margin-top:12px">
-                <a href="pages/property-detail.html?id=3" class="ghost">View</a>
-                <button class="btn">Contact</button>
-              </div>
-            </div>
-          </article>
-
+          <!-- Add other property cards similarly -->
         </div>
       </section>
     </main>
 
-    <footer>
+    <!-- Testimonials Section -->
+    <section class="testimonials" style="padding:40px 0;background:#f9f9f9;text-align:center">
       <div class="container">
-        <p>&copy; 2025 RealEstra. All rights reserved.</p>
+        <h2>What Our Clients Say</h2>
+        <p class="muted" style="color:gray;font-size:14px">Hear from some of our happy homeowners</p>
+        <div class="testimonials-grid" style="display:flex;gap:20px;justify-content:center;flex-wrap:wrap;margin-top:20px">
+          <div class="testimonial-card" style="background:white;padding:20px;border-radius:8px;flex:1;max-width:250px;box-shadow:0 4px 10px rgba(0,0,0,0.05)">
+            <p>"Found my dream home thanks to RealEstra!"</p>
+            <strong>- Sarah K.</strong>
+          </div>
+          <div class="testimonial-card" style="background:white;padding:20px;border-radius:8px;flex:1;max-width:250px;box-shadow:0 4px 10px rgba(0,0,0,0.05)">
+            <p>"Great service and smooth process."</p>
+            <strong>- Mark D.</strong>
+          </div>
+          <div class="testimonial-card" style="background:white;padding:20px;border-radius:8px;flex:1;max-width:250px;box-shadow:0 4px 10px rgba(0,0,0,0.05)">
+            <p>"Highly recommend for anyone searching for a new home."</p>
+            <strong>- Emily R.</strong>
+          </div>
+        </div>
       </div>
-    </footer>
+    </section>
 
-    <!-- Modal -->
-    <div id="modal" class="modal">
-      <div class="panel">
-        <h2>Add New Listing</h2>
-        <p>This feature is coming soon.</p>
-        <button class="btn" onclick="closeModal()">Close</button>
-      </div>
-    </div>
+    
 
-    <script src="js/main.js"></script>
-  </div>
-</body>
-</html>
+    
