Add Mortgage Calculator link to navigation

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <a href="pages/about.html">About</a>
             <a href="pages/agents.html">Agents</a>
             <a href="pages/contact.html">Contact</a>
+            <a href="pages/calculator-page.html">Mortgage Calculator</a>
             <button class="btn">Add Listing</button>
             <button
               id="theme-toggle"
