--- a/pages/about.html
+++ b/pages/about.html
@@ -9,85 +9,16 @@
       content="Learn more about RealEstra and our mission."
     />
     <link rel="stylesheet" href="../css/main.css" />
-    <style>
-      .about-content {
-        max-width: 900px;
-        margin: 0 auto;
-      }
-      .about-hero {
-        text-align: center;
-        padding: 48px 0;
-      }
-      .about-hero h1 {
-        font-size: 36px;
-        margin-bottom: 16px;
-      }
-      .about-section {
-        margin: 48px 0;
-      }
-      .about-section h2 {
-        margin-bottom: 16px;
-      }
-      .team-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        gap: 24px;
-        margin-top: 24px;
-      }
-      .team-member {
-        background: var(--card);
-        padding: 24px;
-        border-radius: 12px;
-        border: 1px solid #eef3fb;
-        text-align: center;
-      }
-      .team-member-avatar {
-        width: 100px;
-        height: 100px;
-        border-radius: 50%;
-        background: var(--brand);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: white;
-        font-size: 36px;
-        font-weight: 700;
-        margin: 0 auto 16px;
-      }
-      .stats {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-        gap: 24px;
-        margin: 48px 0;
-      }
-      .stat-card {
-        background: var(--card);
-        padding: 32px;
-        border-radius: 12px;
-        border: 1px solid #eef3fb;
-        text-align: center;
-      }
-      .stat-value {
-        font-size: 48px;
-        font-weight: 700;
-        color: var(--brand);
-        margin-bottom: 8px;
-      }
-      .stat-label {
-        color: var(--muted);
-        font-size: 16px;
-      }
-    </style>
   </head>
   <body>
     <div class="container">
       <header>
-        <a href="../index.html" style="text-decoration: none">
+        <a href="../index.html">
           <div class="brand">
             <div class="logo">RE</div>
             <div>
-              <div style="font-weight: 700">RealEstra</div>
-              <div style="font-size: 12px; color: var(--muted)">
+              <div class="brand-name">RealEstra</div>
+              <div class="brand-subtitle">
                 Find your next home
               </div>
             </div>
@@ -107,7 +38,7 @@
       <main class="about-content">
         <div class="about-hero">
           <h1>About RealEstra</h1>
-          <p class="muted" style="font-size: 18px">
+          <p class="muted about-subtitle">
             Your trusted partner in finding the perfect home
           </p>
         </div>
@@ -150,7 +81,7 @@
         <div class="about-section">
           <h2>What We Do</h2>
           <p>RealEstra offers comprehensive real estate services including:</p>
-          <ul style="line-height: 2">
+          <ul class="about-list">
             <li>Property listings and search</li>
             <li>Buyer and seller representation</li>
             <li>Property valuation and market analysis</li>
@@ -188,28 +119,21 @@
 
         <div class="about-section">
           <h2>Why Choose Us</h2>
-          <div
-            style="
-              display: grid;
-              grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-              gap: 24px;
-              margin-top: 24px;
-            "
-          >
-            <div class="card">
-              <h3 style="margin-top: 0">Expert Knowledge</h3>
+          <div class="why-choose-grid">
+            <div class="card why-choose-card">
+              <h3>Expert Knowledge</h3>
               <p class="muted">
                 Our team has deep knowledge of local markets and trends.
               </p>
             </div>
-            <div class="card">
-              <h3 style="margin-top: 0">Personalized Service</h3>
+            <div class="card why-choose-card">
+              <h3>Personalized Service</h3>
               <p class="muted">
                 We tailor our approach to meet your unique needs and goals.
               </p>
             </div>
-            <div class="card">
-              <h3 style="margin-top: 0">Technology-Driven</h3>
+            <div class="card why-choose-card">
+              <h3>Technology-Driven</h3>
               <p class="muted">
                 We leverage the latest technology to streamline your experience.
               </p>
