--- a/pages/calculator-page.html
+++ b/pages/calculator-page.html
@@ -4,70 +4,27 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mortgage Calculator</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 20px;
-      background: #f5f5f5;
-    }
-
-    .container {
-      max-width: 600px;
-      margin: auto;
-      padding: 20px;
-      background: #fff;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    }
-
-    h2 { text-align: center; }
-    label { display: block; margin-top: 15px; font-weight: bold; }
-    input { width: 100%; padding: 10px; margin-top: 5px; border: 1px solid #ccc; border-radius: 5px; }
-
-    button {
-      margin-top: 20px;
-      width: 100%;
-      padding: 12px;
-      background: #007BFF;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      font-size: 16px;
-    }
-
-    button:hover { background: #45a049; }
-
-    .result-box {
-      margin-top: 25px;
-      padding: 15px;
-      background: #eef;
-      border-radius: 6px;
-    }
-
-    #chartContainer { margin-top: 30px; }
-  </style>
+  <link rel="stylesheet" href="../css/main.css" />
 </head>
 <body>
-  <div class="container">
-    <h2>Mortgage Calculator</h2>
+  <div class="container calculator-container">
+    <h2 class="calculator-title">Mortgage Calculator</h2>
 
-    <label>Property Price (€)</label>
-    <input type="number" id="price" placeholder="e.g. 150000" />
+    <label class="calculator-label">Property Price (€)</label>
+    <input class="calculator-input" type="number" id="price" placeholder="e.g. 150000" />
 
-    <label>Down Payment (€)</label>
-    <input type="number" id="down" placeholder="e.g. 30000" />
+    <label class="calculator-label">Down Payment (€)</label>
+    <input class="calculator-input" type="number" id="down" placeholder="e.g. 30000" />
 
-    <label>Interest Rate (%)</label>
-    <input type="number" id="rate" placeholder="e.g. 4.5" />
+    <label class="calculator-label">Interest Rate (%)</label>
+    <input class="calculator-input" type="number" id="rate" placeholder="e.g. 4.5" />
 
-    <label>Loan Term (Years)</label>
-    <input type="number" id="years" placeholder="e.g. 25" />
+    <label class="calculator-label">Loan Term (Years)</label>
+    <input class="calculator-input" type="number" id="years" placeholder="e.g. 25" />
 
-    <button onclick="calculateMortgage()">Calculate</button>
+    <button class="calculator-btn" onclick="calculateMortgage()">Calculate</button>
 
-    <div id="result" class="result-box" style="display:none"></div>
+    <div id="result" class="result-box result-box-hidden"></div>
 
     <canvas id="chartContainer" width="400" height="250"></canvas>
   </div>
@@ -90,7 +47,7 @@
       const totalPaid = monthlyPayment * totalMonths;
       const totalInterest = totalPaid - loanAmount;
 
-      document.getElementById('result').style.display = 'block';
+      document.getElementById('result').classList.remove('result-box-hidden');
       document.getElementById('result').innerHTML = `
         <strong>Monthly Payment:</strong> €${monthlyPayment.toFixed(2)}<br>
         <strong>Total Interest:</strong> €${totalInterest.toFixed(2)}<br>
